The FormFu plugin now understands, eg message_loc: ['Max files: [_1]', 10]

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ the appropriate patches.  Corrections, additions, deletions welcome:
 Alain Barbet            (ALIAN)
 Andy Wardley            (ABW)
 Brian Cassidy           (BRICAS)
+Charlie Garrison        (CNG)
 Christian Hansen
 Cosimo Streppone        (COSIMO)
 Clinton Gormley         (DRTECH)
