--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+[Changes for 0.81 - 2010-04-09]
+* Locale::Maketext::Extract::PLugin::FormFu
+    - the plugin now understands YAML of the form:
+        mesage_loc: ['Max files: [_1]', 10]
+
+      Thanks to Charlie Garrison for the patch
+
 [Changes for 0.80 - 2010-04-08]
 * Locale::Maketext::Lexicon
     - Added the _preload option, which forces parsing of the lexicon
