Fixed some spelling errors

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ the appropriate patches.  Corrections, additions, deletions welcome:
 
 Alain Barbet            (ALIAN)
 Andy Wardley            (ABW)
+Ansgar Burchardt
 Brian Cassidy           (BRICAS)
 Charlie Garrison        (CNG)
 Christian Hansen
