In Locale::Maketext::Lexicon -remove the local $@ when loading PO files - made it difficult to debug errors when loading PO's
      Thanks to Ton Voon for the patch
      https://rt.cpan.org/Ticket/Display.html?id=63722

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Sean M. Burke           (SBURKE)
 Stephen Quinney         (SJQUINNEY)
 Tatsuhiko Miyagawa      (MIYAGAWA)
 Thierry Vignaud
+Ton Voon                (TONVOON)
 Wei-Hon Chen
 Yann Kerherve           (YANNK)
 Yi Ma Mao               (IMACAT)
