Locale::Maketext::Extract - added a fix from Ivan Bessarov to avoid uninit warnings when msgids contain trailing spaces

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ Gaal Yahas              (GAAL)
 Harmen
 Helmut Lichtenberg
 Hsin-Chan Chien         (HCCHIEN)
+Ivan Bessarabov         (BESSARABV)
 Jesse Vincent           (JESSE)
 Jiing Deng
 Joe McCarty
