Make Extract print plugin-loading errors to STDERR when warnings enabled

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,7 @@ Sean M. Burke           (SBURKE)
 Stephen Quinney         (SJQUINNEY)
 Tatsuhiko Miyagawa      (MIYAGAWA)
 Thierry Vignaud
+Tokuhiro Matsuno        (TOKUHIROM)
 Ton Voon                (TONVOON)
 Wei-Hon Chen
 Yann Kerherve           (YANNK)
