--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+[Changes for 0.87 - 2011-07-20]
+* Locale::Maketext::Extract
+   - Now warns on loading bad plugins if warnings enabled
+* Locale::Maketext::Extract::Plugin::Base
+   - Corrected the synopsis
+
+  Thanks to TOKUHIROM for the bug reports
+
 [Changes for 0.86 - 2011-02-16]
 * Bumped version because the META file was showing an old version number.
 
