Added ASIMON's patch to support Mason 2 extraction

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ patches or suggestions, or their bug reports or comments have inspired
 the appropriate patches.  Corrections, additions, deletions welcome:
 
 Alain Barbet            (ALIAN)
+Alexandre Simon         (ASIMON)
 Andy Wardley            (ABW)
 Ansgar Burchardt
 Brian Cassidy           (BRICAS)
