--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+[Changes for 0.90 - 2011-08-19]
+* Doc changes
+
 [Changes for 0.89 - 2011-08-19]
 * Added support to the TT2 parser for Mojolicious style tags
   Thanks to COSIMO for the patch
